# gci_sensors

./: .gitignore  CMakeLists.txt  LICENSE  format-code.sh  readme.md
dev/: mlx90393.c  mlx90393.h  mlx_spi.c  sox_spi_alt.c  sox_spi_core1.c
docs/: linux-i2c.md
docs/betaflight/: sensors.md
docs/lsm6dsox/: lsm6dsox.md
examples/: CMakeLists.txt  bmp.c  bmp390_i2c.c  bmp390_spi.c  gps.c  hmc5883_i2c.c  icm.c  interrupt.c  lis2mdl.c  lis2mdl_spi.c  lis3.c  lis3mld_i2c.c  lps22_spi.c  mlx_spi.c  qmc5883_i2c.c  sox.c  sox_i2c.c  sox_int.c  sox_spi.c  sox_spi_alt.c  sox_spi_core1.c
src/: algorithms.c  algorithms.h  bmp390.c  bmp390.h  hmc5883.c  icm42688p.c  io-common.c  io-i2c.c  io-spi.c  lis2mdl.c  lis3mdl.c  lis3mdl.h  lps22.c  lsm6dsox.c  lsm6dsox.h  mlx90393.c  pa1010d.c  pa1010d.h  pmtk.h  qmc5883.c
src/gci_sensors/: algorithms.h  bmp390.h  gci_sensors.h  hmc5883.h  icm42688p.h  io.h  lis2mdl.h  lis3mdl.h  lps22.h  lsm6dsox.h  pa1010d.h  pmtk.h  qmc5883.h  typedefs.h
